# Open.EDC

./: .gitignore  Cargo.toml  LICENSE  README.md  STEPS.md  entrypoint.sh  requirements.txt
apps/application/: Cargo.toml
apps/domain/: Cargo.toml
apps/infrastructure/: Cargo.toml
apps/infrastructure/src/entities/: user_row.rs
apps/infrastructure/src/repos/: user_repo.rs
apps/tools/: Cargo.toml
docs/: APPLICATION_TOPOLOGY.md
src/: consts.rs  handlers.rs  identity.rs  main.rs  routers.rs
src/auth/: handlers.rs  routers.rs  schemas.rs
src/auth/handlers/: login.rs  logout.rs  revoke.rs  token.rs
src/auth/schemas/: login.rs  token.rs
src/common/: schemas.rs
src/common/schemas/: openapi.rs
src/handlers/: identities.rs
src/identity/: dtos.rs  handlers.rs  mappers.rs  routers.rs  schemas.rs
src/identity/dtos/: login_request_dto.rs
src/identity/handlers/: login.rs  login_handler.rs  user.rs  userinfo_handler.rs
src/identity/schemas/: login.rs  userinfo.rs
src/routers/: identities.rs
tools/: README.md
