[package]
name = "personal_electronic_data_clinica"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".", # Only if 'src' is a folder containing another Cargo.toml
]

[dependencies]
axum = "0.8.8"
http1 = "0.0.2"
hyper = { version = "1", features = ["full"] }
json = "0.12.4"
tokio = { version = "1.8.1", features = ["full"] }
tower = "0.5.2"
