[package]
name = "open_edc_apis"
version = "0.1.0"
edition = "2024"
[workspace]
members = ["apps/application", "apps/domain", "apps/infrastructure"]
[dependencies]
open_edc_application = { path = "apps/application" }
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["std", "derive"] }
openapi = "0.1.5"
[[bin]]
name = "open_edc_apis"
path = "src/main.rs"
