[package]
name = "open_edc_apis"
version = "0.1.0"
edition = "2024"
[workspace]
members = [
    "apps/application",
    "apps/domain",
    "apps/infrastructure",
    "apps/tools",
]
[dependencies]
open_edc_application = { path = "apps/application" }
open_edc_tools = { path = "apps/tools" }
axum = "0.8.8"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
] }
serde = { version = "1.0.228", features = [
    "std",
    "derive",
] }
utoipa-axum = "0.2"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = [
    "axum",
] }
[[bin]]
name = "open_edc_apis"
path = "src/main.rs"
